# Delhi-metro-twin

./: .editorconfig  .env.example  .gitignore  DEPLOY-FREE.md  LICENSE  Makefile  README.md  docker-compose.yml  pytest.ini
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/ai/: __init__.py  assistant.py  base.py  crowd.py  delay.py  demand.py  eta.py  incident.py  inference.py  train.py
backend/app/core/: config.py  deps.py  exceptions.py  lifespan.py  logging.py  security.py
backend/app/db/: session.py
backend/app/messaging/: rabbitmq.py
backend/app/middleware/: cors.py  logging_mw.py  metrics.py  rate_limit.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  auth.py  common.py  depot.py  line.py  simulation.py  station.py  track.py  train.py  train_debug.py
backend/app/services/: __init__.py  auth_service.py  depot_service.py  line_service.py  simulation_service.py  station_service.py  track_service.py  train_service.py
backend/app/simulation_bridge/: __init__.py  bridge.py
backend/dmdt_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_health.py  test_lines.py  test_stations.py  test_websockets.py
database/: README.md  alembic.ini  pyproject.toml
database/dmdt_database.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
database/dmdt_db/: __init__.py  base.py  config.py  enums.py
database/dmdt_db/models/: __init__.py  crossover.py  (+9 more)
database/init/: 00_extensions.sql
database/migrations/: env.py
database/seed/: seed_network.py
database/tests/: conftest.py  test_models.py
gis/: README.md  pyproject.toml
gis/data/: network.json
gis/dmdt_gis/: __init__.py  crs.py  dataset.py  geojson.py  geometry.py  spatial.py  track.py  validation.py  wkb.py
gis/dmdt_gis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gis/tests/: test_validation.py
gis/tools/: generate_network.py
(+254 files in other folders)
