[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmdt-backend"
version = "0.1.0"
description = "Backend API for the Delhi Metro Digital Twin"
requires-python = ">=3.10"


[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
