[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmdt-gis"
version = "0.1.0"
description = "GIS layer for the Delhi Metro Digital Twin: track geometry, station polygons, tile tooling."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "DMRC Digital Twin" }]
dependencies = [
    "shapely>=2.0.3",
    "pyproj>=3.6.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dmdt_gis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
